# RTSubtitle

./: README.md  pyproject.toml
rt_subtitle/: __main__.py  customwidget.py  floatWin.ui  main.ui  manager.py  model_down.py  recognize.py  ui.py
